--- a/api/package.json
+++ b/api/package.json
@@ -43,7 +43,7 @@
     "jsonpath": "~1.1.1",
     "jsonwebtoken": "~8.5.1",
     "jwks-rsa": "~2.0.5",
-    "knex": "~1.0.2",
+    "knex": "~2.4.2",
     "lodash": "~4.17.21",
     "mime": "~2.5.2",
     "moment": "^2.29.4",
@@ -55,6 +55,7 @@
     "qs": "~6.10.1",
     "rxjs": "~7.8.0",
     "sql-template-strings": "~2.2.2",
+    "object-inspect": "~1.12.3",
     "swagger-ui-express": "~4.3.0",
     "typescript": "~4.2.4",
     "uuid": "~8.3.2",
@@ -79,6 +80,7 @@
     "@types/pg": "~8.6.1",
     "@types/sinon": "~10.0.4",
     "@types/sinon-chai": "~3.2.5",
+    "@types/object-inspect": "~1.8.1",
     "@types/swagger-ui-express": "~4.1.3",
     "@types/uuid": "~8.3.1",
     "@types/yamljs": "~0.2.31",
