--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "npm": ">= 6.0.0"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@bcgov/bc-sans": "~1.0.1",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -50,6 +51,7 @@
     "express": "~4.17.1",
     "formik": "~2.2.6",
     "handlebars": "^4.7.7",
+    "jest-watch-typeahead": "^2.2.2",
     "jszip": "^3.10.1",
     "keycloak-js": "^20.0.2",
     "leaflet": "^1.8.0",
