--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "@mui/lab": "^5.0.0-alpha.97",
     "@mui/material": "^5.10.0",
     "@mui/styles": "^5.9.3",
+    "@mui/system": "^5.11.15",
     "@mui/x-data-grid": "^6.0.2",
     "@react-keycloak/web": "^3.4.0",
     "@react-leaflet/core": "~1.0.2",
