--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,17 +1,11 @@
 {
-  "short_name": "Ionic App",
-  "name": "My Ionic App",
+  "short_name": "BioHub Data Aggregator System",
+  "name": "BioHub Data Aggregator System",
   "icons": [
     {
-      "src": "assets/icon/favicon.png",
+      "src": "assets/icon/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "assets/icon/icon.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable"
     }
   ],
   "start_url": ".",
