--- a/database/package.json
+++ b/database/package.json
@@ -27,6 +27,7 @@
     "typescript": "~4.1.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.2.0",
     "@types/node": "~14.14.31",
     "@types/pg": "~7.14.4",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
@@ -34,6 +35,7 @@
     "eslint": "~7.32.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-prettier": "~3.3.1",
+    "geojson-random": "^0.5.0",
     "npm-run-all": "~4.1.5",
     "prettier": "~2.3.2",
     "prettier-plugin-organize-imports": "~2.3.4",
