--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       - ${API_PORT}:${API_PORT}
     environment:
       - NODE_ENV=${NODE_ENV}
+      - NODE_OPTIONS=${API_NODE_OPTIONS}
       - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
       - ELASTICSEARCH_EML_INDEX=${ELASTICSEARCH_EML_INDEX}
       - ELASTICSEARCH_TAXONOMY_INDEX=${ELASTICSEARCH_TAXONOMY_INDEX}
@@ -148,6 +149,7 @@ services:
       - ${APP_PORT}:${APP_PORT}
     environment:
       - NODE_ENV=${NODE_ENV}
+      - NODE_OPTIONS=${APP_NODE_OPTIONS}
       - REACT_APP_NODE_ENV=${NODE_ENV}
       - PORT=${APP_PORT}
       - REACT_APP_API_HOST=${API_HOST}
@@ -181,7 +183,6 @@ services:
       - DB_SCHEMA=${DB_SCHEMA}
       - DB_USER_API=${DB_USER_API}
       - DB_USER_API_PASS=${DB_USER_API_PASS}
-      - DB_SCHEMA_DAPI_V1=${DB_SCHEMA_DAPI_V1}
     volumes:
       - /opt/app-root/src/node_modules # prevents local node_modules overriding container node_modules
     networks:
@@ -208,7 +209,6 @@ services:
       - DB_SCHEMA=${DB_SCHEMA}
       - DB_USER_API=${DB_USER_API}
       - DB_USER_API_PASS=${DB_USER_API_PASS}
-      - DB_SCHEMA_DAPI_V1=${DB_SCHEMA_DAPI_V1}
     volumes:
       - /opt/app-root/src/node_modules # prevents local node_modules overriding container node_modules
     networks:
@@ -235,7 +235,6 @@ services:
       - DB_SCHEMA=${DB_SCHEMA}
       - DB_USER_API=${DB_USER_API}
       - DB_USER_API_PASS=${DB_USER_API_PASS}
-      - DB_SCHEMA_DAPI_V1=${DB_SCHEMA_DAPI_V1}
     volumes:
       - /opt/app-root/src/node_modules # prevents local node_modules overriding container node_modules
     networks:
