--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,7 @@
     "fast-json-patch": "~3.1.1",
     "fast-xml-parser": "~4.1.3",
     "fastq": "^1.15.0",
+    "json-schema-traverse": "^1.0.0",
     "jsonpath-plus": "~7.2.0",
     "jsonwebtoken": "~8.5.1",
     "jwks-rsa": "~2.0.5",
