--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "@elastic/elasticsearch": "~8.1.0",
     "adm-zip": "~0.5.5",
     "ajv": "~8.6.3",
+    "avj": "0.0.0",
     "aws-sdk": "^2.1391.0",
     "axios": "~0.21.4",
     "clamdjs": "~1.0.2",
