--- a/app/package.json
+++ b/app/package.json
@@ -38,7 +38,7 @@
     "@mui/system": "^5.11.15",
     "@mui/x-data-grid": "^6.0.2",
     "@react-keycloak/web": "^3.4.0",
-    "@react-leaflet/core": "~1.0.2",
+    "@react-leaflet/core": "~2.1.0",
     "@tmcw/togeojson": "~4.2.0",
     "@turf/bbox": "~6.3.0",
     "@turf/boolean-equal": "~6.3.0",
@@ -54,11 +54,11 @@
     "jest-watch-typeahead": "^2.2.2",
     "jszip": "^3.10.1",
     "keycloak-js": "^20.0.2",
-    "leaflet": "^1.8.0",
+    "leaflet": "~1.9.4",
     "leaflet-draw": "~1.0.4",
     "leaflet-fullscreen": "~1.0.2",
-    "leaflet.locatecontrol": "~0.76.0",
-    "leaflet.markercluster": "^1.5.3",
+    "leaflet.locatecontrol": "~0.79.0",
+    "leaflet.markercluster": "~1.5.3",
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
@@ -67,7 +67,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "~11.3.2",
-    "react-leaflet": "~3.1.0",
+    "react-leaflet": "~4.2.1",
     "react-number-format": "~4.5.2",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
@@ -80,7 +80,8 @@
     "yup": "~0.32.9"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "~7.12.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-typescript": "~7.23.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^8.0.1",
@@ -88,10 +89,10 @@
     "@types/dompurify": "^2.3.4",
     "@types/geojson": "~7946.0.7",
     "@types/jest": "~28.1.7",
-    "@types/leaflet": "^1.7.11",
-    "@types/leaflet-draw": "~1.0.5",
-    "@types/leaflet-fullscreen": "~1.0.6",
-    "@types/leaflet.markercluster": "^1.5.1",
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet-draw": "^1.0.10",
+    "@types/leaflet-fullscreen": "~1.0.9",
+    "@types/leaflet.markercluster": "~1.5.4",
     "@types/lodash-es": "~4.17.4",
     "@types/node": "~14.14.31",
     "@types/node-sass": "~4.11.2",
@@ -99,7 +100,6 @@
     "@types/qs": "~6.9.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@types/react-leaflet": "~2.8.2",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "~1.8.2",
