--- a/app/package.json
+++ b/app/package.json
@@ -63,6 +63,7 @@
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
+    "oidc-client-ts": "^3.0.0-rc.0",
     "pug": "^3.0.2",
     "qs": "~6.9.4",
     "react": "^17.0.2",
@@ -70,6 +71,7 @@
     "react-dropzone": "~11.3.2",
     "react-leaflet": "~4.2.1",
     "react-number-format": "~4.5.2",
+    "react-oidc-context": "^3.0.0-beta.0",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
     "react-window": "~1.8.6",
