--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,10 @@ services:
       - DB_PORT=5432
       - DB_DATABASE=${DB_DATABASE}
       - DB_SCHEMA=${DB_SCHEMA}
+      - DB_POOL_SIZE=${DB_POOL_SIZE}
+      - DB_CONNECTION_MAX_USES=${DB_CONNECTION_MAX_USES}
+      - DB_CONNECTION_TIMEOUT=${DB_CONNECTION_TIMEOUT}
+      - DB_IDLE_TIMEOUT=${DB_IDLE_TIMEOUT}
       - KEYCLOAK_HOST=${KEYCLOAK_HOST}
       - KEYCLOAK_REALM=${KEYCLOAK_REALM}
       - KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID}
@@ -113,6 +117,10 @@ services:
       - DB_PORT=5432
       - DB_DATABASE=${DB_DATABASE}
       - DB_SCHEMA=${DB_SCHEMA}
+      - DB_POOL_SIZE=${DB_POOL_SIZE}
+      - DB_CONNECTION_MAX_USES=${DB_CONNECTION_MAX_USES}
+      - DB_CONNECTION_TIMEOUT=${DB_CONNECTION_TIMEOUT}
+      - DB_IDLE_TIMEOUT=${DB_IDLE_TIMEOUT}
       - OBJECT_STORE_URL=${OBJECT_STORE_URL}
       - OBJECT_STORE_ACCESS_KEY_ID=${OBJECT_STORE_ACCESS_KEY_ID}
       - OBJECT_STORE_SECRET_KEY_ID=${OBJECT_STORE_SECRET_KEY_ID}
